@@ -1,6 +1,7 @@
 package br.com.fiap.fiaphackathonbooking.service;
 
 import br.com.fiap.fiaphackathonbooking.dto.ClienteDTO;
+import br.com.fiap.fiaphackathonbooking.exceptions.InvalidRequestNotFoundException;
 import br.com.fiap.fiaphackathonbooking.exceptions.NotFoundException;
 import br.com.fiap.fiaphackathonbooking.model.Cliente;
 import br.com.fiap.fiaphackathonbooking.repository.ClienteRepository;
@@ -10,7 +11,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -24,7 +24,7 @@ public class ClienteService {
         Cliente cliente = modelMapper.map(clienteDTO, Cliente.class);
         clienteRepository.findByCpf(clienteDTO.getCpf())
                 .ifPresent(clienteCpf -> {
-                    throw new NotFoundException("CPF já cadastrado!: " + clienteDTO.getCpf());
+                    throw new InvalidRequestNotFoundException("CPF já cadastrado!: " + clienteDTO.getCpf());
                 });
         Cliente novoCliente = clienteRepository.save(cliente);
         return modelMapper.map(novoCliente, ClienteDTO.class);
@@ -32,7 +32,7 @@ public class ClienteService {
 
     public ClienteDTO atualizarCliente(Long id, ClienteDTO clienteDTO) {
         Cliente cliente = clienteRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Cliente não encontrado com id: " + id));
+                .orElseThrow(() -> new InvalidRequestNotFoundException("Cliente não encontrado com id: " + id));
         clienteDTO.setId(id);
         modelMapper.map(clienteDTO, cliente);
         Cliente clienteAtualizado = clienteRepository.save(cliente);
@@ -41,15 +41,14 @@ public class ClienteService {
 
     public void deletarCliente(Long id) {
         Cliente cliente = clienteRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Cliente não encontrado com id: " + id));
+                .orElseThrow(() -> new InvalidRequestNotFoundException("Cliente não encontrado com id: " + id));
         clienteRepository.delete(cliente);
     }
 
     public List<ClienteDTO> listarTodos() {
         List<Cliente> clientes = clienteRepository.findAll();
         return clientes.stream()
-                .map(cliente -> modelMapper.map(cliente, ClienteDTO.class))
-                .collect(Collectors.toList());
+                .map(cliente -> modelMapper.map(cliente, ClienteDTO.class)).toList();
     }
 
     public ClienteDTO buscarPorId(Long id) {
